[gd_scene load_steps=7 format=2]

[ext_resource path="res://Code/Player.gd" type="Script" id=1]
[ext_resource path="res://Objects/Gun3.tscn" type="PackedScene" id=2]
[ext_resource path="res://cross_hair.png" type="Texture" id=3]
[ext_resource path="res://Objects/Gun2.tscn" type="PackedScene" id=4]
[ext_resource path="res://Objects/Gun1.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape" id=1]
radius = 0.2
height = 0.8

[node name="Player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0135106, 0.620547, 0.00408673 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="LookPiviot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 0.999982, 0.00595149, 0, -0.00595149, 0.999982, 0, 0.430332, 0 )

[node name="Camera" type="Camera" parent="LookPiviot"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )

[node name="Hand" type="Node2D" parent="LookPiviot"]

[node name="Gun1" parent="LookPiviot/Hand" instance=ExtResource( 5 )]

[node name="Gun2" parent="LookPiviot/Hand" instance=ExtResource( 4 )]

[node name="Gun3" parent="LookPiviot/Hand" instance=ExtResource( 2 )]

[node name="RayCast" type="RayCast" parent="."]
cast_to = Vector3( 0, 0, 2000 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OmniLight" type="OmniLight" parent="."]
omni_range = 10.1485
